fix: spark.stop() added

--- a/workspace/test.ipynb
+++ b/workspace/test.ipynb
@@ -25,8 +25,8 @@
     "\n",
     "spark = (\n",
     "    SparkSession.builder.master(\"spark://spark-master:7077\")\n",
-    "    .appName(\"Testing PySpark ass Example\")\n",
-    "    .getOrCreate()  # type: ignore\n",
+    "    .appName(\"Testing PySpark Example\")\n",
+    "    .getOrCreate()\n",
     ")\n",
     "\n",
     "\n",
@@ -75,6 +75,15 @@
    ],
    "source": [
     "spark.read.csv(\"GDAXI.INDX.csv\", header=True).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   }
  ],
