--- a/workspace/test.ipynb
+++ b/workspace/test.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/12/18 17:49:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "                                                                                \r"
+      "[Stage 0:>                                                          (0 + 1) / 1]\r"
      ]
     },
     {
@@ -28,16 +25,19 @@
       "+-----+---+\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "spark = (\n",
-    "    SparkSession.builder.master(\"spark://spark-master:7077\")\n",
-    "    .appName(\"Testing PySpark Example\")\n",
-    "    .getOrCreate()\n",
-    ")\n",
+    "spark = SparkSession.builder.master(\"spark://spark-master:7077\").appName(\"Testing PySpark Example\").getOrCreate()\n",
     "\n",
     "\n",
     "data = [(\"John\", 28), (\"Alice\", 35), (\"Bob\", 42)]\n",
@@ -47,16 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +102,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
