--- a/workspace/AWS S3.ipynb
+++ b/workspace/AWS S3.ipynb
@@ -66,7 +66,7 @@
     "    .appName(\"Testing S3\")\n",
     "    .config(\n",
     "        \"spark.jars.packages\",\n",
-    "        \"org.apache.hadoop:hadoop-aws:3.3.6, com.amazonaws:aws-java-sdk-s3:1.12.621\",\n",
+    "        \"org.apache.hadoop:hadoop-aws:3.3.6,com.amazonaws:aws-java-sdk-s3:1.12.621\",\n",
     "    )\n",
     "    .getOrCreate()\n",
     ")\n",
@@ -77,9 +77,15 @@
     "    \"org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider\",\n",
     ")\n",
     "spark.conf.set(\"spark.hadoop.fs.s3a.awsAccessKeyId\", AWS_ACCESS_KEY_ID)\n",
-    "spark.conf.set(\"spark.hadoop.fs.s3a.awsSecretAccessKey\", AWS_SECRET_ACCESS_KEY)\n",
-    "\n",
-    "\n",
+    "spark.conf.set(\"spark.hadoop.fs.s3a.awsSecretAccessKey\", AWS_SECRET_ACCESS_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "spark.read.parquet(\"s3a://cloud-sdk/data/parquet/XETRA\").show()"
    ]
   },
@@ -98,8 +104,20 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
